<resources>
    <string name="app_name">Bouwtrillingsmeter</string>
    <string name="acceleration">Versnelling</string>
    <string name="velocity">Snelheid</string>
    <string name="frequency">Frequentie</string>
    <string name="vf">Snelheid / Frequentie</string>
    <string name="vfdom">Snelheid / Dominante Frequentie</string>
    <string name="fdom">Dominante Frequentie</string>
    <string name="Xvalue">X:</string>
    <string name="Yvalue">Y:</string>
    <string name="Zvalue">Z:</string>
    <string name="typetrilling">Type trilling</string>
    <string name="category">Categorie</string>
    <string-array name="category">
        <item>Categorie 1</item>
        <item>Categorie 2</item>
        <item>Categorie 3</item>
        <item>Fundatie</item>
    </string-array>
    <string name="vibrationsensitive">Is het pand gevoelig voor trillingen?</string>
    <string name="Yes">Ja</string>
    <string name="No">Nee</string>
    <string name="vibrationsource">Type trillingsbron</string>
    <string-array name="vibrationsourcechoise">
        <item>Kortdurende trillingen</item>
        <item>Herhaald kortdurende trillingen</item>
        <item>Continue trillingen</item>
    </string-array>
    <string-array name="marginchoise">
        <item>Aan</item>
        <item>Uit</item>
    </string-array>
    <string name="confirm">Begin Meting</string>
    <string name="help">Ik weet het niet</string>
    <string name="q9">Is het pand gefundeerd op houten funderingspalen of is het pand op staal gefundeerd?</string>
    <string name="q0">Bestaat het pand waarin u wilt meten uit een betonnen bebouwing met metselwerk of gevelbekleding? Veel bebouwing na 1970 valt in deze categorie.</string>
    <string name="q1">Betreft de bebouwing een monument of beschermd stadsgezicht?</string>
    <string name="q2">Bestaat het pand waarin u wilt meten uit gemetselde wanden? Veel bebouwing van voor 1970 valt in deze categorie.</string>
    <string name="q3">Verkeerd het pand in slechte bouwkundige staat? Zijn er bijvoorbeeld scheuren of kieren of andere schade aan het pand aanwezig?</string>
    <string name="q5">Bestaat het pand uit een stalenskelet, glas als gevelbekelding of hout? Bijvoorbeeld kantoor gebouwen met grote glazen gevels of houten schuurtjes.</string>
    <string name="q6">Zijn de trillingen die u wilt meten afkomstig van een van onderstaande bronnen: \n -explosies \n -botsingen \n - Het van hoogte legen van kraanbakken \n - Het met de kraan breken van beton \n - Storten van puin in container(bak)</string>
    <string name="q7">Zijn de trillingen die u wilt meten afkomstig van een van onderstaande bronnen: \n - Weg of railverkeer \n - Heiwerkzaamheden \n - Het rijden van shovels of kranen op rupsen of luchtbanden</string>
    <string name="q8">Zijn de trillingen die u wilt meten afkomstig van een van onderstaannde bronnen: \n - Intrillen van damwanden \n - trilwalsen en trilplaten</string>
    <string name="margin">Veiligheid op  meting</string>
    <string name="velocitygraph">Snelheidsdiagram</string>
    <string name="velocitygraphxaxis">Tijd [uu:mm:ss]</string>
    <string name="velocitygraphyaxis">Snelheid [mm/s]</string>
    <string name="accelerationgraph">Versnellingsdiagram</string>
    <string name="accelerationgraphxaxis">Tijd [uu:mm:ss]</string>
    <string name="accelerationgraphyaxis">Versnelling [mm/s<sup><small>2</small></sup>]</string>
    <string name="vfgraph">Frequentiespectrum</string>
    <string name="vfxaxis">Frequentie [Hz]</string>
    <string name="vfyaxis">Snelheid [mm/s]</string>
    <string name="fdomgraph">Dominante Frequentie</string>
    <string name="fdomgraphxaxis">Tijd [uu:mm:ss]</string>
    <string name="fdomgraphyaxis">Frequentie [Hz]</string>
    <string name="vfdomgraph">Snelheid - Frequentie diagram</string>
    <string name="vfdomgraphxaxis">Frequentie [Hz]</string>
    <string name="vfdomgraphyaxis">Snelheid [mm/s]</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="vibrationClassification">Er is geen kwalificatie voor het type trilling kunnen maken. U wordt terug naar het startscherm gestuurd.</string>
    <string name="buildingClassification">Er is geen kwalificatie voor het type bebouwing kunnen maken. U wordt terug naar het startscherm gestuurd.</string>
    <string name="noCategoryBuilding">Het pand kan niet worden in gedeeld in een categorie van de SBR-A richtlijn. U wordt terug naar het startscherm gestuurd.</string>
    <string name="wizardFinished">De instellingen zijn ingesteld.</string>
    <string name="settings">Instellen grenswaarde</string>
    <string name="start">Start</string>
    <string name="logo">Logo Gemeente Rotterdam</string>
    <string name="wizard">Wizard</string>
    <string name="wizardCategory">Bepaling categorie pand</string>
    <string name="wizardVibration">Bepaling type trilling</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Exceed">Overschrijding</string>
</resources>
