<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/categorychoise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:layout_gravity="left"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">
    </Spinner>

    <Spinner
        android:id="@+id/vibrationsourcechoise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:layout_gravity="left"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">
    </Spinner>

    <Spinner
            android:id="@+id/marginchoise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10pt"
            android:paddingRight="10pt"
            android:layout_gravity="left"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp">
    </Spinner>

        <Button
            android:id = "@+id/savesettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/helpsettings"
            android:layout_centerHorizontal="true" />

        <Button
            android:id = "@+id/helpsettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/marginchoise"
            android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typetrilling"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/categorychoise"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/margin"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/vibrationsourcechoise"
        android:layout_alignStart="@+id/textView2" />


</RelativeLayout>