<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gemeenterotterdam.trillingmeterapp.StartFragment">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <TextView
        android:id="@+id/textAcceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceleration"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textXacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Xvalue"

        android:layout_marginEnd="17dp"
        android:layout_below="@+id/textAcceleration"
        android:layout_toStartOf="@+id/textAcceleration" />

        <TextView
            android:id="@+id/xAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XVALUE"
            android:layout_marginStart="13dp"
            android:layout_alignBaseline="@+id/textXacc"
            android:layout_alignBottom="@+id/textXacc"
            android:layout_toEndOf="@+id/textAcceleration" />

        <TextView
            android:id="@+id/textYacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yvalue"
            android:layout_below="@+id/textXacc"
            android:layout_alignStart="@+id/textXacc"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/yAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YVALUE"

            android:layout_alignBaseline="@+id/textYacc"
            android:layout_alignBottom="@+id/textYacc"
            android:layout_alignStart="@+id/xAcc" />

        <TextView
            android:id="@+id/textZacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zvalue"
            android:layout_below="@+id/textYacc"
            android:layout_alignEnd="@+id/textXacc"
            android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/zAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ZVALUE"

                android:layout_alignBaseline="@+id/textZacc"
                android:layout_alignBottom="@+id/textZacc"
                android:layout_alignEnd="@+id/xAcc" />

            <TextView
                android:id="@+id/textVelocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velocity"
                android:layout_below="@+id/zAcc"
                android:layout_centerHorizontal="true" />

           <TextView
               android:id="@+id/textXvel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Xvalue"
               android:layout_below="@+id/textVelocity"
               android:layout_alignStart="@+id/textZacc" />

           <TextView
               android:id="@+id/xVel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="XVALUE"

               android:layout_alignBaseline="@+id/textXvel"
               android:layout_alignBottom="@+id/textXvel"
               android:layout_alignStart="@+id/zAcc" />

               <TextView
                   android:id="@+id/textYvel"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Yvalue"
                   android:layout_below="@+id/textXvel"
                   android:layout_alignEnd="@+id/textXvel"
                   android:layout_marginTop="24dp" />

              <TextView
                  android:id="@+id/yVel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="YVALUE"

                  android:layout_alignBaseline="@+id/textYvel"
                  android:layout_alignBottom="@+id/textYvel"
                  android:layout_alignEnd="@+id/xVel" />

             <TextView
                 android:id="@+id/textZvel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Zvalue"
                 android:layout_below="@+id/textYvel"
                 android:layout_alignEnd="@+id/textYacc"
                 android:layout_marginTop="24dp" />

               <TextView
                   android:id="@+id/zVel"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="ZVALUE"
                   android:layout_alignBaseline="@+id/textZvel"
                   android:layout_alignBottom="@+id/textZvel"
                   android:layout_alignEnd="@+id/yVel" />

    <TextView
        android:id="@+id/textFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:layout_below="@+id/zVel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textXfreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textYvel"
        android:layout_below="@+id/textFrequency"
        android:layout_marginTop="18dp"
        android:text="@string/Xvalue" />

    <TextView
        android:id="@+id/xFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XVALUE"
        android:layout_alignBaseline="@+id/textXfreq"
        android:layout_alignBottom="@+id/textXfreq"
        android:layout_alignStart="@+id/zVel" />

    <TextView
        android:id="@+id/textYfreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textZvel"
        android:layout_below="@+id/textXfreq"
        android:layout_marginTop="25dp"
        android:text="@string/Yvalue" />

    <TextView
        android:id="@+id/yFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textYfreq"
        android:layout_alignStart="@+id/xFreq"
        android:text="YVALUE" />

    <TextView
        android:id="@+id/textzFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zvalue"
        android:layout_below="@+id/textYfreq"
        android:layout_alignEnd="@+id/textXfreq"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/zFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/yFreq"
        android:layout_alignTop="@+id/textzFreq"
        android:text="ZVALUE" />

    <TextView
        android:id="@+id/textFdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textFrequency"
        android:layout_below="@+id/zFreq"
        android:layout_marginTop="20dp"
        android:text="@string/fdom" />

    <TextView
        android:id="@+id/textXfdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Xvalue"
        android:layout_below="@+id/textFdom"
        android:layout_alignEnd="@+id/textzFreq" />

    <TextView
        android:id="@+id/xFdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XYVALUE"
        android:layout_alignBaseline="@+id/textXfdom"
        android:layout_alignBottom="@+id/textXfdom"
        android:layout_toEndOf="@+id/textVelocity" />

    <TextView
        android:id="@+id/textYfdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textXfdom"
        android:layout_below="@+id/textXfdom"
        android:layout_marginTop="15dp"
        android:text="@string/Yvalue" />

    <TextView
        android:id="@+id/yFdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YVALUE"
        android:layout_alignBaseline="@+id/textYfdom"
        android:layout_alignBottom="@+id/textYfdom"
        android:layout_toEndOf="@+id/textFdom" />

    <TextView
        android:id="@+id/textZfdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textYfdom"
        android:layout_alignParentBottom="true"
        android:text="@string/Zvalue" />

    <TextView
        android:id="@+id/zFdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZVALUE"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textFdom"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/exceedX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XEXCEED"
        android:layout_alignBaseline="@+id/xFdom"
        android:layout_alignBottom="@+id/xFdom"
        android:layout_toEndOf="@+id/xFreq" />

    <TextView
        android:id="@+id/exceedY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YEXCEED"
        android:layout_alignBaseline="@+id/yFdom"
        android:layout_alignBottom="@+id/yFdom"
        android:layout_toEndOf="@+id/yAcc" />

    <TextView
        android:id="@+id/exceedZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/exceedY"
        android:text="ZEXCEED" />

</android.widget.RelativeLayout>
