<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gemeenterotterdam.trillingmeterapp.NumericalFragment">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textAcceleration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceleration"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/LayoutAcc"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textAcceleration"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/XAccView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="X:"/>
            <TextView
                android:id="@+id/YAccView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:layout_below="@id/XAccView"
                android:text="Y:"/>
            <TextView
                android:id="@+id/ZAccView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:layout_below="@id/YAccView"
                android:text="Z:"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/yAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/zAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textVelocity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velocity"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/LayoutAcc"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/LayoutVel"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textVelocity"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="X:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Y:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Z:"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xVel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/yVel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/zVel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/LayoutVel"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/LayoutFreq"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textFrequency"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="X:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Y:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Z:"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/yFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/zFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textFdom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fdom"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/LayoutFreq"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/layoutFdom"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textFdom"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="X:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Y:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Z:"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xFdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/yFdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/zFdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textExceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exceed"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/layoutFdom"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/layoutExceed"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textExceed"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="X:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Y:"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingRight="3dp"
                android:text="Z:"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xExceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/yExceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/zExceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</android.widget.RelativeLayout>
